--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,10 +21,20 @@ android {
         }
     }
 
+    signingConfigs {
+        releaseSigningConfig {
+            storeFile rootProject.file("app/shawn.jks")
+            storePassword System.getProperty("keystorePass")
+            keyAlias System.getProperty("alias")
+            keyPassword System.getProperty("keyPass")
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.releaseSigningConfig
         }
     }
 }
