--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,14 +11,14 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
-    
+
 
     signingConfigs {
         releaseSigningConfig {
             storeFile rootProject.file("app/shawn.jks")
-            storePassword System.getProperty("keystorePass")
-            keyAlias System.getProperty("alias")
-            keyPassword System.getProperty("keyPass")
+            storePassword System.getProperty("APPCENTER_KEYSTORE_PASSWORD")
+            keyAlias System.getProperty("APPCENTER_KEY_ALIAS")
+            keyPassword System.getProperty("APPCENTER_KEY_PASSWORD")
         }
     }
 
