--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,9 +15,9 @@ android {
     signingConfigs {
         releaseSigningConfig {
             storeFile rootProject.file("app/shawn.jks")
-            storePassword System.getProperty("APPCENTER_KEYSTORE_PASSWORD")
-            keyAlias System.getProperty("APPCENTER_KEY_ALIAS")
-            keyPassword System.getProperty("APPCENTER_KEY_PASSWORD")
+            storePassword "93289328"
+            keyAlias "shawn"
+            keyPassword "93289328"
         }
     }
 
