--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
 # any settings specified in this file.
-keystore_password=93289328
-key_alias=shawn
-key_password=93289328
+#keystore_password=93289328
+#key_alias=shawn
+#key_password=93289328
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 
