--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
 # any settings specified in this file.
-#keystore_password=
-#key_alias=
-#key_password=
+keystore_password=
+key_alias=
+key_password=
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 
