--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     
     repositories {
         google()
-        
+        jcenter()
         maven { url 'https://maven.google.com' }
        
     }
@@ -20,6 +20,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        jcenter()
         
     }
 }
